<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    android:background="@color/azul_cielito"
    tools:context=".ArchivoReportes">


    <TextView
        android:id="@+id/titulo_archivo_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/titulo_archivo_reportes"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/lightblue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/home_icon_menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:contentDescription="menu hamburguesa"
        app:layout_constraintStart_toEndOf="@id/titulo_archivo_reps"
        app:layout_constraintTop_toTopOf="@+id/titulo_archivo_reps" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_perdido"
        android:text="@string/perdidos"
        android:textSize="24sp"
        android:textStyle="italic"
        android:backgroundTint="@color/lightblue"
        app:layout_constraintStart_toStartOf="@id/titulo_archivo_reps"
        app:layout_constraintTop_toBottomOf="@id/titulo_archivo_reps"
        android:layout_marginTop="40sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_encontrado"
        android:text="@string/encontrados"
        android:textSize="24sp"
        android:textStyle="italic"
        android:backgroundTint="@color/lightblue"
        app:layout_constraintStart_toStartOf="@id/titulo_archivo_reps"
        app:layout_constraintTop_toBottomOf="@id/btn_perdido"
        android:layout_marginTop="40sp"
        />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/arrow_direction_left_back_lightblue"
        android:contentDescription="volver"
        app:layout_constraintStart_toStartOf="@id/home_icon_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>